# UnsupSeg

./: .gitignore  LICENSE  Makefile  README.md  dataloader.py  environment.yml  main.py  next_frame_classifier.py  predict.py  requirements.txt  setup.cfg  setup.py  solver.py  utils.py
conf/: config.yaml
pretrained_models/: buckeye+_pretrained.ckpt
scripts/: make_timit.py  preprocess_buckeye.py
src/unsup_seg/: dataloader.py  main.py  next_frame_classifier.py  predict.py  solver.py  utils.py
