[metadata]
name = unsup_seg
version = 0.0.1
description = Unsupervised Phoneme Segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klay-music/unsupervised_segmentation
project_urls =
    Bug Tracker = https://github.com/klay-music/unsupervised_segmentation/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.7.13

[options.packages.find]
where = src

[flake8]
extend-ignore = E203,W503,W292
max-line-length = 100
